--- a/XHTML/ej04/index.html
+++ b/XHTML/ej04/index.html
@@ -10,8 +10,8 @@
 		<thead>
 				<tr>
 					<th></th>
-					<th colspan="3"> MP3 Mini</th>
-					<th colspan="2">MP3 Grande</th>
+					<th colspan="3"><img src="img/mp3-pequeño.jpeg" alt="mp3 pequeño"></th>
+					<th colspan="2"><img src="img/mp3-grande.jpeg" alt="mp3 grande"></th>
 				</tr>
 		</thead>
 		<tfoot>
