--- a/XHTML/ej05/index.html
+++ b/XHTML/ej05/index.html
@@ -16,9 +16,12 @@
  		<label>DNI</label><br>
  		<input type="text" name="dni" value=""></br>
  		<label for="">Sexo</label></br>
- 		<label for="">Mujer</label><input	type="radio" name="sexo" value= "mujer" checked	/>
- 		<label for="">Hombre</label><input	type="radio" name="sexo" value= "hombre" 	/><br>
- 		<label for="">Incluir mi foto </label><input	type="file"	name="foto"/><br>
+ 		<label for="">Mujer</label>
+ 		<input	type="radio" name="sexo" value= "mujer" checked	/>
+ 		<label for="">Hombre</label>
+ 		<input	type="radio" name="sexo" value= "hombre" 	/><br>
+ 		<label for="">Incluir mi foto </label>
+ 		<input	type="file"	name="foto"/><br>
  		<input	type="checkbox"	name="boletin"	value="1"	checked	/>
  		<label for="">Subscribirme al boletín</label><br>
  		<input	id="boton1"	type="submit"	name="cambios" value="Guardar cambios"	/>
