--- a/XHTML/ej05/index.html
+++ b/XHTML/ej05/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Formulario Básico</title>
 </head></html>
 <body>
 	<h1>Rellena tu cv</h1>
@@ -25,7 +25,7 @@
  		<input	type="checkbox"	name="boletin"	value="1"	checked	/>
  		<label for="">Subscribirme al boletín</label><br>
  		<input	id="boton1"	type="submit"	name="cambios" value="Guardar cambios"	/>
- 		<input	id="boton2"	type="button"	name="borrar"	 value=" Borrar los datos introducidos"/>
+ 		<input	id="boton2"	type="reset"	name="borrar"	 value=" Borrar los datos introducidos"/>
 
 
 	</form>
