--- a/XHTML/ej05/index.html
+++ b/XHTML/ej05/index.html
@@ -22,8 +22,8 @@
  		<input	type="radio" name="sexo" value= "hombre" 	/><br>
  		<label for="">Incluir mi foto </label>
  		<input	type="file"	name="foto"/><br>
- 		<input	type="checkbox"	name="boletin"	value="1"	checked	/>
- 		<label for="">Subscribirme al boletín</label><br>
+ 		<input	 id="boletin" type="checkbox"	name="boletin"	value="1"	checked	/>
+ 		<label for="boletin">Subscribirme al boletín</label><br>
  		<input	id="boton1"	type="submit"	name="cambios" value="Guardar cambios"	/>
  		<input	id="boton2"	type="reset"	name="borrar"	 value=" Borrar los datos introducidos"/>
 
