ejercicio final XHTML

--- a/XHTML/ejfinal/index.html
+++ b/XHTML/ejfinal/index.html
@@ -21,21 +21,22 @@
 			</div>
 			<div id= "contenido"> 
 					<div class="entrada">
-						<div class="titulo-izquierda"><h4>Title</h4></div>
-						<div class="titulo-derecha"><h5>Fecha</h5></div>
-						<div class="subtitulo">John Doe, 5 Comments</div>
-						<div class="contenido-entrada">
+						<h4 class="titulo-izquierda">Title</h4>
+						<h5 class="titulo-derecha">Fecha</h5>
+						<div class="subtitulo"><a href="">John Doe, 5 Comments</a></div>
+						<p clsss= "entrada-texto">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, ex quis velit porro cumque necessitatibus incidunt labore et illo quaerat! Quam eum sit aliquid molestiae accusamus eveniet, inventore voluptatem dicta?
-						</div>
+						</p>
 					</div>
 					<div class="entrada">
-						<div class="titulo-entrada">Title</div>
-						<div class="contenido-entrada">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, quaerat eius consectetur, obcaecati iusto quod quae ullam? Ipsa, odit. Odio aperiam delectus, a illo asperiores tempore non eos quas corrupti.
+						<h4 class="titulo-izquierda">Title</h4>
+						<h5 class="titulo-derecha">Fecha</h5>
+						<div class="subtitulo"><a href="">John Doe, 5 Comments</a></div>
+							<p class="ntrada-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, quaerat eius consectetur, obcaecati iusto quod quae ullam? Ipsa, odit. Odio aperiam delectus, a illo asperiores tempore non eos quas corrupti.</p>
 							<div class="subcontenido-entrada">
 									<div class= "cabezera">Julay</div>
 									<div class= "izquierda">5</div>
-									<div class= "derecha">LOrem</div>
+									<div class= "derecha">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </div>
 							</div>
 						</div>
 					</div>
