--- a/CSS2/ej02/index.html
+++ b/CSS2/ej02/index.html
@@ -86,7 +86,7 @@
 			<p>Nullam est lacus, suscipit ut, dapibus quis, condimentum ac, risus. Vivamus vestibulum, ipsum sollicitudin faucibus pharetra, dolor metus fringilla dui, vel aliquet pede diam tempor tortor.</p>
 			<p>Vestibulum pulvinar urna et quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam vel turpis vitae dui imperdiet laoreet. Quisque eget ipsum.</p>
 			<p>Donec commodo, turpis vel venenatis sollicitudin, quam ante convallis justo, sed eleifend justo lectus quis sapien. Ut consequat libero eget est.</p>
-			<p><a href="#">Seguir leyendo...</a></p>
+			<p><a href="#" class="mail">Seguir leyendo...</a></p>
 		</div>
 	
 		<div class="articulo">
