Ejercicio adicionales CSS2

--- a/CSS2/ej04/index.html
+++ b/CSS2/ej04/index.html
@@ -10,9 +10,28 @@
 	 	<li>
 	 		<span>Menu 1</span>
 	 		<ul class="submenu">
-	 			<li><span>Submenu 1</span></li>
-	 			<li><span>Submenu 2</span></li>
-	 			<li><span>Submenu 3</span></li>
+	 			<li><span>Submenu 1</span>
+
+	 				<ul class="azpisubmenu">
+	 					<li>Azpisubmenu 1.1</li>
+	 					<li>Azpisubmenu 1.2</li>
+	 					<li>Azpisubmenu 1.3</li>
+	 				</ul>
+	 			</li>
+	 			<li><span>Submenu 2</span>
+	 				<ul class="azpisubmenu">
+	 					<li>Azpisubmenu 2.1</li>
+	 					<li>Azpisubmenu 2.2</li>
+	 					<li>Azpisubmenu 2.3</li>
+	 				</ul>
+	 			</li>
+	 			<li><span>Submenu 3</span>
+						<ul class="azpisubmenu">
+	 					<li>Azpisubmenu 1</li>
+	 					<li>Azpisubmenu 2</li>
+	 					<li>Azpisubmenu 3</li>
+	 				</ul>
+	 			</li>
 	 			<li><span>Submenu 4</span></li>
 	 			<li><span>Submenu 5</span></li>
 	 		</ul>
