--- a/CSS3/ej01/index.html
+++ b/CSS3/ej01/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Selecctores CSS 3</title>
 	<link rel="stylesheet" href="assets/css/main.css">
+	<script></script>
 </head>
 <body>
  	<ul>
