Ejercicio adicionales CSS2

--- a/CSS2/ej05/pagina2.html
+++ b/CSS2/ej05/pagina2.html
@@ -23,7 +23,7 @@
 			<div class= "contenido"> 
 				<div class="entradas">
 					<div class="entrada">
-						<h2><a href="articulo.html">Title</a></h2>
+						<h2 class="h2"><a href="articulo.html">Title</a></h2>
 						<span class="titulo-derecha">Fecha</span>
 						<span class="subtitulo">
 							<a href="autor">John Doe,</a>
@@ -100,25 +100,25 @@
 										<p class="parrafo-cometarios">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum recusandae tenetur iure, necessitatibus officia sapiente enim, cum incidunt hic, debitis obcaecati praesentium rerum sint magni nostrum. Commodi eveniet, necessitatibus beatae!</p>
 									</div>-->
 
-									<ul class="comments">
+									<ul>
 										<li class="clearfix">
 										<div class="fleft avatar">
-											<img src="img/perfil-usuario.png" alt="" class="img.responsive">
+											<img src="img/perfil-usuario.png" alt="" class="img-responsive">
 										</div>	
 										<div class= "comment fleft ">
 												<a href="aaa.html">Jaione</a> February 4, 2015
-												<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, </span>
+												<p>pLorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus,	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere ex consequatur est in ad tempora eaque tenetur veritatis nostrum libero dolore voluptatum reiciendis cumque similique, voluptates ullam dolorum, perferendis. Nostrum. </p>
 										</div>
 											
 										<!--</div>-->
 										</li>
 										<li class="clearfix">
 										<div class="fleft avatar">
-											<img src="img/perfil-usuario.png" alt="" class="fleft avatar">
+											<img src="img/perfil-usuario.png" alt="" class="img-responsive">
 										</div>
 											<div class= "comment fleft ">
-											<a href="sss.html">AUtor</a>
-											<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, </span>
+											<a href="sss.html">Jaione</a> February 4, 2015
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia distinctio, accusantium veniam saepe nulla fugiat at consectetur labore atque quibusdam amet ducimus inventore hic, facilis illo similique voluptatibus non. Amet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga cupiditate debitis vel et nihil voluptatibus nostrum error, beatae molestiae dicta incidunt molestias qui suscipit possimus non laudantium. Est, vel, reiciendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, iure. Molestias vel incidunt debitis similique. Dolore, voluptatum, laborum quisquam ipsa dolores doloremque nobis in pariatur iusto, delectus natus repudiandae minus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quod, est ut sint nisi incidunt nam iste ullam minima, adipisci nemo quisquam quia. Quibusdam natus quidem placeat modi nesciunt.</p>
 											</div>
 										</li>
 									</ul>
