Ejercicios Responsive Bootstrap

--- a/CSS3/ej07/index.html
+++ b/CSS3/ej07/index.html
@@ -10,13 +10,13 @@
     </head>
 <body>
     <div class="wrapper">
-        <div id="experiment">
-            <div id="clock">
-                <div id="hour">
+        <div class="experiment">
+            <div class="clock">
+                <div class="hour">
                    <img src="assets/img/hourHand.png"></div>
-                <div id="minute">
+                <div class="minute">
                     <img src="assets/img/minuteHand.png"></div>
-                <div id="second">
+                <div class="second">
                     <img src="assets/img/secondHand.png"></div>
             </div>
         </div>
