--- a/RWD/ej01/index.html
+++ b/RWD/ej01/index.html
@@ -8,19 +8,29 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-		<div class="header navbar navbar-inverse">
+		<div class="header navbar navbar-default">
 			<div class="container">
 			  <div class="navbar-header">
-     			 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      			 <span class="sr-only">Toggle navigation</span>
-        		<span class="icon-bar"></span>
-        		<span class="icon-bar"></span>
-       			 <span class="icon-bar"></span>
-      			</button>
-     	 <a class="navbar-brand" href="#">Brand</a>
-    </div>
+     			 	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-menu">
+      					<span class="sr-only">Toggle navigation</span>
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>
+       					<span class="icon-bar"></span>
+      				</button>
+     				 <a class="navbar-brand" href="index.html">Ejemplo de Bootstrap</a>
+    			</div>
+    			<div class="collapse navbar-collapse" id="navbar-menu">
 
-				<h1>Ejemplo de Bootstrap</h1>
+    				<ul class="nav navbar-nav navbar-right">
+    					 <li class="active">
+    					 		<a href="toru.html">Take a tour</a>
+    					 </li>
+    					 <li>
+    					 		<a href="buy.html">Buy Ticket</a>
+    					 </li>
+    				</ul>
+    			</div>
+
 			</div>
 			
 		</div>
@@ -29,7 +39,7 @@
 				<div class="well">
 					<div class="row">
 						<div class="col-xs-12 col-sm-6">
-							<h2>Lorem ipsum dolor sit amet</h2>
+							<h1 class="h2">Lorem ipsum dolor sit amet</h1>
 							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, quod nesciunt numquam eum pariatur possimus, a iusto, quidem odio vitae, corporis nulla itaque minima cumque minus velit odit magni ea!</p>
 							<a href="tour.html" class="btn btn-default">Take a tour</a>
 							<a href="buytickets.html" class="btn btn-primary">Buy Tickets Now</a>
@@ -42,7 +52,7 @@
 				</div>
 				<div class="row text-center">
 
-					<div class="col-xs-12 col-sm-4 features">
+					<div class="col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-0 features">
 
 							<span class="glyphicon glyphicon-briefcase"></span>	
 
@@ -50,12 +60,12 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, iure, doloremque temporibus quo consectetur asperiores, aspernatur illo, minima cumque illum delectus nostrum quos praesentium debitis nam nobis magnam pariatur laudantium!</p>
 							
 					</div>
-					<div class="col-xs-12 col-sm-4 features">
+					<div class="col-xs-6 col-sm-4 features">
 							<span class="glyphicon glyphicon-random"></span>
 							<h3>Go Anywhere</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, iure, doloremque temporibus quo consectetur asperiores, aspernatur illo, minima cumque illum delectus nostrum quos praesentium debitis nam nobis magnam pariatur laudantium!</p>
 					</div>
-					<div class="col-xs-12 col-sm-4 features ">
+					<div class="col-xs-6 col-sm-4 features ">
 							<span class="glyphicon glyphicon-send"></span>
 							<h3>RocketBus&reg:</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, iure, doloremque temporibus quo consectetur asperiores, aspernatur illo, minima cumque illum delectus nostrum quos praesentium debitis nam nobis magnam pariatur laudantium!</p>
@@ -119,5 +129,7 @@
 			</div>
 			
 		</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>	
+	<script src="../bootstrap/js/bootstrap.min.js"></script>	
 </body>
 </html>
