--- a/JavaScript/ej03/index.html
+++ b/JavaScript/ej03/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Comprobar DNI</title>
-	
+	<title>Document</title>
 </head>
 <body>
 	<script src="assets/js/app.js"></script>
