--- a/JavaScript/ejfinal/index.html
+++ b/JavaScript/ejfinal/index.html
@@ -3,36 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Ejercicio 21 - Validación de formularios</title>
-
-    <style type="text/css">
-    body {font-family: arial, helvetica;}
-    form {
-        width: 600px;
-        margin: 20px auto 0 auto;
-    }
-    label {
-        float: left;
-        width: 200px;
-        font-weight: bold;
-    }
-    label[for="registro_condiciones"] {
-        float: none;
-    }
-    input[type="text"],
-    input[type="password"],
-    textarea {
-        width: 360px;
-    }
-    input[type="checkbox"] {
-        margin-left: 200px;
-    }
-    input[type="submit"] {
-        margin: 20px 0 0 200px;
-        display: block;
-    }
-    </style>
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
-
 <body>
     <form action="http://www.arkaitzgarro.com/javascript/snippets/cap18/servidor.php" method="POST" id="registro">
         <fieldset>
@@ -51,7 +23,6 @@
             <input type="submit" value="Enviar">
         </fieldset>
     </form>
-    <script type="text/javascript" src="./index_files/validador.js"></script>
-    <script type="text/javascript" src="./index_files/code.js"></script>
-
+    <script type="text/javascript" src="assets/js/validator.js"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
 </body></html>
